--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -34,9 +34,12 @@ jobs:
         ruby-version: 3.0
         bundler-cache: true # runs 'bundle install' and caches installed gems
     - name: Run tests
-      run: bundle exec rspec spec/site
+      run: bundle exec rspec --format Brief --format Details --out log/validation.log spec/site
       env:
         SITE_CONFIG: config/swarco_itc3.yaml
+    - name: Show detailed log
+      if: always()
+      run: cat log/validation.log
     - name: Rename validation.log
       if: always()
       run: |
