--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -5,6 +5,8 @@ name: Build Documentation
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -35,15 +37,16 @@ jobs:
 
       - name: check for changes
         run: |
-          if git diff --exit-code; then
+          if git diff --quiet; then
             echo "git_changes=false" >> $GITHUB_ENV
           else
             echo "git_changes=true" >> $GITHUB_ENV
           fi
 
       - name: Commit changes
-        if: env.git_changes
+        if: env.git_changes == 'true'
         run: |
+          echo env.git_changes
           git add docs/dev -f
           git commit -m "rebuild yard docs"
 
