--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -19,8 +19,9 @@ jobs:
 
       - name: Install Ruby and Gems
         uses: ruby/setup-ruby@v1
-        #with:
-        #  bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        with:
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 1
 
       - name: Set git indentity
         run: |
