--- a/.github/workflows/gem_supervisor.yml
+++ b/.github/workflows/gem_supervisor.yml
@@ -7,9 +7,9 @@
 name: Gem supervisor
 on:
   push:
-    branches: [ master ]
+    branches: [ master, equipment ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, equipment ]
 jobs:
   test:
     timeout-minutes: 10
