--- a/.github/workflows/dynniq_ec2.yml
+++ b/.github/workflows/dynniq_ec2.yml
@@ -10,6 +10,10 @@ on:
     branches: [ equipment ]
   pull_request:
     branches: [ equipment ]
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 11 * * *'
+
 jobs:
   test:
     runs-on: [ self-hosted, Windows, X64, ec2 ]
