--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Install wine32
         run: |
           sudo dpkg --add-architecture i386
+          wget -nc https://dl.winehq.org/wine-builds/winehq.key
+          sudo mv winehq.key /usr/share/keyrings/winehq-archive.key
+          wget -nc https://dl.winehq.org/wine-builds/ubuntu/dists/jammy/winehq-jammy.sources
+          sudo mv winehq-jammy.sources /etc/apt/sources.list.d/
           sudo apt-get update
           sudo apt-get -y install wine32
 
