--- a/.github/workflows/swarco_itc2.yml
+++ b/.github/workflows/swarco_itc2.yml
@@ -9,7 +9,7 @@ on:
     - cron:  '45 0 * * *'
 jobs:
   test:
-    if: ${{ github.event.label.name == 'equipment' }}
+    if: ${{ github.event_name == 'schedule' || github.event.label.name == 'equipment' }}
     runs-on: ubuntu-22.04
     steps:
       - name: Install prerequisites
