--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -8,6 +8,7 @@ name: Swarco ITC-3
 on:
   pull_request:
     types: [ labeled ]
+  workflow_dispatch:
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
