--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -15,7 +15,7 @@ on:
     - cron:  '0 22 * * *'
 jobs:
   test:
-    if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event.label.name == 'testhub' }}
+    if: ${{ github.event_name == 'schedule' || github.event.label.name == 'testhub' }}
     runs-on: [ self-hosted, Linux, X64, itc3 ]
     steps:
     - name: Check out repository
